# roboracing-software

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.docif  d  genindex.html  index.html  license.txt  objects.inv  package.xml  search.html  searchindex.js  test.cpp
avc/: CMakeLists.txt  CMakeLists.txt~  nodelet_plugins.xml  package.xml
avc/launch/: avc.launch  avc_follower.launch  avc_sim.launch  bigoli.launch  color_detector_avc.launch  finish_detector.launch  finish_detector_standalone.launch  image_to_pcl.launch  mapper.launch  pcl_combiner.launch  planner.launch  planner_avc.launch  planner_bigoli.launch  planner_macaroni.launch  planner_sedani.launch  sedani.launch  start_detector.launch  start_detector_standalone.launch  test_start.launch  transform.launch  transform.yaml
avc/src/: color_detector_avc.cpp  image_transform.cpp  planner_plotter.py  trigger_calibration.cpp
avc/srv/: calibrate_image.srv
iarrc/: CMakeLists.txt  package.xml
iarrc/launch/: camera_to_pcl.launch  canny_line_detector.launch  circuit.launch  circuit_race_controller.launch  circuit_race_steerer.launch  circuitrace.launch  circuitrace_controller.launch  color_detector.launch  color_detector_circuit.launch  color_detector_drag.launch  drag.launch  drag_race_steerer.launch  dragrace.launch  dragrace_controller.launch  frame_inverted.launch  frame_merger.launch  histogram_detector.launch  iarrc.launch  joystick.launch  laser_test.launch  motor_relay.launch  navigation.launch  nn_planner_circuit.launch  nn_planner_drag.launch  obstacles_to_pcl.launch  ol_reliable.launch  planner_circuit.launch  planner_drag.launch  planner_iarrc.launch  ps3eye.launch  race_end_detector.launch  speed_controller.launch  steerer.launch  steerer_circuit.launch  steerer_dragrace.launch  stoplight_watcher.launch  test_nn_planner.launch  visual_cone_detector.launch
iarrc_launch/: CMakeLists.txt  package.xml
iarrc_launch/launch/: circuit_race_steerer.launch  circuitrace.launch  cone_detector.launch  drag_race_steerer.launch  dragrace.launch  dragrace_controller.launch  frame_merger.launch  hokuyo.launch  joystick.launch  lane_detection.launch  motor_relay.launch  ps3eye.launch  stoplight_watcher.launch  stoplight_watcher.launch~  visual_cone_detector (copy).launch  visual_cone_detector.launch~
iarrc_launch/nodes/: CMakeLists.txt  package.xml
iarrc_launch/udev/: 75-ps3eye.rules
iarrc_motor_relay/: CMakeLists.txt  package.xml
iarrc_motor_relay/src/: iarrc_motor_relay_node.cpp
iarrc_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
iarrc_msgs/msg/: DriveCommand.msg  MotorCommand.msg  iarrc_speed.msg  iarrc_steering.msg
iarrc_tutorials/: CMakeLists.txt  package.xml
iarrc_tutorials/data/: cone-line-move.bag  cone-line.bag  cone-turn-move.bag  indoor-cones.bag  stoplight_red.bag
iarrc_tutorials/launch/: iarrc_tutorial_node.launch
iarrc_tutorials/msg/: Empty.msg
rr_common/: CMakeLists.txt  dyn_reconf_plugins.xml  nodelet_plugins.xml  package.xml
rr_common/cfg/: lin-tracking-reconf.cfg  planner_configuration.cfg
rr_common/launch/: demo_obstacle_follower.launch  finish_detector.launch  finish_detector_standalone.launch  nn_planner.launch  path_visualization_sim.launch  rosbag_remote_recorder.launch  sound_node.launch  test_pcl_converter.launch
rr_description/: CMakeLists.txt  package.xml
rr_description/conf/: controller.yaml  evgp_car_params.yaml
rr_description/config/: control_params.yaml  tricycle_control.yaml  velodyne.yaml
rr_description/env-hooks/: rr_description.dsv.in
rr_description/launch/: display.launch.py  velodyne_fix.launch.py
rr_description/meshes/: EVGP_robot.STL  wheel.dae
rr_description/rviz/: urdf_config.rviz
rr_description/speedi/: speedi.urdf  speedi_joint_updater.cpp  speedi_state_publisher.launch
rr_description/src/: main.cpp
rr_description/urdf/: .gitignore  bigoli.urdf  evgp.urdf.xacro  evgp_body.urdf.xacro  evgp_opponent.urdf  evgp_opponent.urdf.xacro  macaroni.urdf  rigatoni.urdf  rigatoni.urdf.xacro  rigatoni_april6.urdf.xacro  rigatoni_opponent.urdf  rigatoni_opponent.urdf.xacro  sedani.urdf  speedi.urdf
rr_evgp/: CMakeLists.txt  frames.gv  package.xml  plugins.xml
rr_evgp/conf/: april_tag_locations.yaml  april_tag_settings.yaml  april_tag_taglist.yaml  costmap_2d_basic_mapping.yaml  mapping_basic.yaml  mapping_common.yaml  mapping_common_params.yaml  mapping_filtered.yaml  mapping_global.yaml  mapping_global_bayes.yaml  mapping_local.yaml  mapping_local_shadow_track.yaml  opponent_localization_from_ground_truth.yaml  planner.yaml  planner_evgp_sim.yaml  planner_sim.yaml  planner_sim_avc_track.yaml  planner_sim_hillclimb.yaml  planner_staticmap_sim.yaml  robot_localization_from_ground_truth.yaml  robot_localization_from_sensors.yaml  robot_localization_from_sensors_sim.yaml  shadow_map_sim.yaml  test_points.yaml
rr_evgp/config/: nav2.yaml  slam.yaml
rr_evgp/launch/: april_tag_detection.launch  cone_connection.launch  cone_connection_node.launch  continuous_detection.launch  distance_mapper.launch  evgp.launch  evgp_comp.launch  evgp_localization.launch  evgp_on_avc_planning_demo.launch  evgp_planning_demo.launch  evgp_planning_demo_hillclimbing.launch  evgp_sim_nav.launch.py  ground_segmentation.launch  laplacian_line_detector_front.launch  laplacian_line_detector_side.launch  laplacian_line_detector_sim.launch  lidar_parsing.launch  lidar_z_threshold.launch  lines_detection_frontcam.launch  localization.launch  localization_ground_truth.launch  localization_sim.launch  mapping.launch  mapping_from_ground_truth.launch  mapping_from_sensors.launch  mapping_sim.launch  navigation_static_map_sim.launch  (+6 more)
rr_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rr_iarrc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
rr_ml/: .gitignore  CMakeLists.txt  package.xml  readme.md
rr_msgs/: CMakeLists.txt  package.xml
rr_platform/: CMakeLists.txt  CMakeLists.txt~  README.md  nodelet_plugins.xml  package.xml  riga.launch
rr_platform_msgs/: CMakeLists.txt  package.xml
(+1337 files in other folders)
