<?xml version="1.0"?>
<package>
  <name>iarrc_launch</name>
  <version>0.0.1</version>
  <description>The iarrc_launch package</description>
  <maintainer email="ehuang3@gatech.edu">Eric Huang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
